force-app/main/default/objects/Template_Problem__c/Template_Problem__c.object-meta.xml
<CustomObject>
    <description>Template Problem stores the Master Data of problems.</description>
    <label>Template Problem</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Problems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>