force-app/main/default/objects/Template_Problem__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goal</label>
    <referenceTo>Template_Problem__c</referenceTo>
    <relationshipLabel>Template Problems (Goal)</relationshipLabel>
    <relationshipName>Template_Problems1</relationshipName>
    <type>Lookup</type>
</CustomField>