force-app/main/default/objects/Template_Problem__c/fields/Intervention__c.field-meta.xml
<CustomField>
    <fullName>Intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intervention</label>
    <referenceTo>Template_Problem__c</referenceTo>
    <relationshipLabel>Template Problems (Intervention)</relationshipLabel>
    <relationshipName>Template_Problems2</relationshipName>
    <type>Lookup</type>
</CustomField>