force-app/main/default/objects/Template_Problem__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objective</label>
    <referenceTo>Template_Problem__c</referenceTo>
    <relationshipLabel>Template Problems (Objective)</relationshipLabel>
    <relationshipName>Template_Problems3</relationshipName>
    <type>Lookup</type>
</CustomField>