force-app/main/default/objects/Template_Problem__c/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Problem</label>
    <referenceTo>Template_Problem__c</referenceTo>
    <relationshipLabel>Template Problems</relationshipLabel>
    <relationshipName>Template_Problems</relationshipName>
    <type>Lookup</type>
</CustomField>