force-app/main/default/objects/Template_Problem__c/fields/SNOMED_CT_Code__c.field-meta.xml
<CustomField>
    <fullName>SNOMED_CT_Code__c</fullName>
    <label>SNOMED CT Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>