force-app/main/default/objects/Template_Problem__c/recordTypes/Goals.recordType-meta.xml
<RecordType>
    <fullName>Goals</fullName>
    <active>true</active>
    <label>Goals</label>
</RecordType>