force-app/main/default/objects/Template_Problem__c/recordTypes/Interventions.recordType-meta.xml
<RecordType>
    <fullName>Interventions</fullName>
    <active>true</active>
    <label>Interventions</label>
</RecordType>