force-app/main/default/objects/Template_Problem__c/recordTypes/Objective.recordType-meta.xml
<RecordType>
    <fullName>Objective</fullName>
    <active>true</active>
    <label>Objective</label>
</RecordType>