force-app/main/default/objects/Template_Problem__c/recordTypes/Problem.recordType-meta.xml
<RecordType>
    <fullName>Problem</fullName>
    <active>true</active>
    <label>Problem</label>
</RecordType>