force-app/main/default/objects/Template_Problem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SNOMED_CT_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>